# askai-cli

./: .bandit  .dockerignore  .gitignore  .pylintrc  ARCHITECTURE.md  Dockerfile  Makefile  README.md  REFACTORING_SUMMARY.md  askai-cli.code-workspace  askai.sh  bandit-report.json  docker-compose.yml  fix_imports.py  fix_test_imports.py  install.sh  pylintrc  pyproject.toml  pyrightconfig.json  remove_trailing_whitespace.sh  requirements.txt  run_local_ci.sh  run_pylint.sh  setup.py  setup_branches.sh  test_api_curl.sh  test_config_wizard.py  test_content_extraction.py  test_pattern_order.py  test_refactored_output.py  testfile.txt
.github/: pull_request_template.md
askai/: utils.py
config/: .config_example.yaml  config_example.yml
docker/: nginx.conf
docs/: API_IMPLEMENTATION.md  ARCHITECTURE_REFACTORING_SUMMARY.md  BRANCH_PROTECTION.md  CI_PIPELINE.md  PATTERN_EXECUTION_API.md  README.md  SOFTWARE_ARCHITECTURE.md  TECHNICAL_ARCHITECTURE.md  TUI_ARCHITECTURE.md  TUI_DESIGN_GUIDE.md  TUI_USER_MANUAL.md  USER_MANUAL.md  VERSION_MANAGEMENT.md  architecture_diagrams.d2
patterns/: _output_format_template.md  _template.md  data_visualization.md  image_interpretation.md  it_solution_market_analysis.md  kql_generation.md  linux_cli_command_generation.md  log_interpretation.md  one_page_website_generation.md  pattern_md_generation.md  pdf_summary.md  spl_generation.md  test_dynamic_format.md  website_content_summary.md
python/: __init__.py  askai.py  banner_argument_parser.py  chat_manager.py  config.py  logger.py  message_builder.py  openrouter_api.py  output_handler.py  utils.py  (+4 more)
(+344 files in other folders)
