[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askai-cli"
version = "1.2.0"
description = "AI-powered CLI tool for intelligent question processing and pattern management"
authors = [{name = "AskAI Team", email = "info@askai.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.append('src')"
ignore-patterns = ["venv/*"]
disable = ["import-error"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
